@@ -66,6 +66,16 @@ eigen <- function(x, symmetric, only.values = FALSE, EISPACK = FALSE)
         else .Internal(La_rg_cmplx(x, only.values))
         ord <- sort.list(Mod(z$values), decreasing = TRUE)
     }
-    return(list(values = z$values[ord],
-                vectors = if (!only.values) z$vectors[, ord, drop = FALSE]))
+    if(only.values)
+	list(values = z$values[ord], vectors = NULL)
+    else
+	structure(class = "eigen",
+		  list(values = z$values[ord],
+		       vectors = z$vectors[, ord, drop = FALSE]))
+}
+
+print.eigen <- function (x, ...) {
+    cat("eigen() decomposition\n")
+    print(unclass(x), ...)
+    invisible(x)
 }
