@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2016-04-12 r70470) -- "Unsuffered Consequences"
+R Under development (unstable) (2016-04-18 r70508) -- "Unsuffered Consequences"
 Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -262,6 +262,7 @@ attr(,"class")
 [1] 0.02466
 > 
 > eigen(A)
+eigen decomposition
 $values
 [1] 29.660+0.000i -4.631+0.000i  4.556+0.000i -2.292+3.117i -2.292-3.117i
 
